manifests/senhas-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: giropops-senhas
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: giropops-senhas
  namespace: giropops-senhas
  name: giropops-senhas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - image: ceievfa/linuxtips-giropops-senhas:1.0
        name: giropops-senhas
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "50m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
